testing code pipeline changes

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <h1>orderNotes</h1>
+    <h1>Welcome to our local food store</h1>
+    <!-- <h1>orderNotes</h1> -->
 </body>
 
 </html>
